# doc_indexing

./: fine_tune_rag.md  llama_test.py
docling/: basic.py  internvl_ocr.py  ollama_qwen3_vl_ocr.py  pyproject.toml  vllm_qwen3_vl_ocr.py
docling/output/: label_content.md  label_deepseekocr.md  label_qwen3_4b.md
fine_tuning/: training.md
vllm_testing/: main.py  pyproject.toml
