[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cuda-bindings==13.0",
    "docling[all,easyoc,rapidocr,tesserocr,vlm]>=2.71.0",
    "easyocr>=1.7.2",
    "google-generativeai>=0.8.6",
    "graphrag>=3.0.1",
    "litellm>=1.81.5",
    "numpy>=2.4.2",
    "paddleocr>=3.4.0",
    "rapidocr>=3.6.0",
]
